turtleart.polygon20.Polygon20.scala.error
Compilation error:
Polygon20:1: error: Missing closing brace `}' assumed here
override def run() {
^Polygon20:1: error: expected start of definition
override def run() {
         ^